tests/errors/typecheck/poly-mismatch.expect
---CODE---
1
---STDERR---
error: source port does not provide value for as long as destination requires
   ┌─ tests/errors/typecheck/poly-mismatch.fil:12:27
   │
12 │     a := new Add[W]<'G+W>(s.out, acc);
   │                           ^^^^^ source is available for ['G+N, 'G+N+1]
   │
   ┌─ ./primitives/./comb.fil:9:7
   │
 9 │       left: ['G, 'L] IN_WIDTH,
   │       ---- requires value for ['G+W, 'G+W+1]

error: source port does not provide value for as long as destination requires
   ┌─ tests/errors/typecheck/poly-mismatch.fil:12:34
   │
12 │     a := new Add[W]<'G+W>(s.out, acc);
   │                                  ^^^ source is available for ['G+N, 'G+N+1]
   │
   ┌─ ./primitives/./comb.fil:10:7
   │
10 │       right: ['G, 'L] IN_WIDTH,
   │       ----- requires value for ['G+W, 'G+W+1]

error: source port does not provide value for as long as destination requires
   ┌─ tests/errors/typecheck/poly-mismatch.fil:13:11
   │
13 │     out = a.out;
   │     ----  ^^^^^ source is available for ['G+W, 'G+W+1]
   │     │      
   │     requires value for ['G+N, 'G+N+1]

error: source port does not provide value for as long as destination requires
   ┌─ tests/errors/typecheck/poly-mismatch.fil:20:11
   │
20 │     out = s.out;
   │     ----  ^^^^^ source is available for ['G+2, 'G+3]
   │     │      
   │     requires value for ['G+4, 'G+5]

Compilation failed with 4 errors.
Run with --show-models to generate assignments for failing constraints.
